--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.71.11",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-maps": "^1.7.1",
     "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.21.1"
+    "react-native-screens": "^3.21.1",
+    "react-redux": "^8.1.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
