--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-react-native": "^0.27.2",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.11",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.21.1"
+    "react-native-screens": "^3.21.1",
+    "react-redux": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
