--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-firebase/app": "^18.0.0",
     "@react-native-firebase/auth": "^18.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/elements": "^1.3.17",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/stripe-react-native": "^0.27.2",
     "axios": "^1.4.0",
+    "install": "^0.13.0",
+    "npm": "^9.7.1",
     "react": "18.2.0",
     "react-native": "0.71.11",
     "react-native-gesture-handler": "^2.12.0",
@@ -26,6 +30,10 @@
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.1",
+    "react-native-svg": "^13.9.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.0"
   },
   "devDependencies": {
