--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.4.7",
+    "@gorhom/portal": "^1.0.14",
     "@react-native-firebase/app": "^18.0.0",
     "@react-native-firebase/auth": "^18.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -17,15 +20,25 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/themed": "^4.0.0-rc.7",
     "@stripe/stripe-react-native": "^0.27.2",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "expo-font": "^11.1.1",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.11",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-maps": "^1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.8.0",
-    "react-native-safe-area-context": "^4.5.3",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.21.1",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-webview": "^13.2.2",
     "react-redux": "^8.1.0"
   },
   "devDependencies": {
