--- a/package.json
+++ b/package.json
@@ -22,21 +22,27 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "@stripe/stripe-react-native": "^0.27.2",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "expo-font": "^11.1.1",
     "install": "^0.13.0",
+    "moment": "^2.29.4",
     "native-base": "^3.4.28",
     "npm": "^9.7.1",
     "react": "18.2.0",
     "react-native": "0.71.11",
+    "react-native-date-picker": "^4.2.13",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "^3.3.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.21.1",
     "react-native-star-rating": "^1.1.0",
